--- a/quiz/src/styles.css
+++ b/quiz/src/styles.css
@@ -1,7 +1,7 @@
 body {
     font-family: Arial, sans-serif;
     text-align: center;
-    background-color: #f0f0f0;
+    background-color: linear-gradient(to right, pink, purple);
 }
 ::backdrop {
     background-color: gradient(to right, pink, purple);
