--- a/totorials/javascript/javascript-learning-app/src/styles.css
+++ b/totorials/javascript/javascript-learning-app/src/styles.css
@@ -1,8 +1,2 @@
 p {
-    color: rgb(13, 234, 13);
-    font-size: 10px;
-    font-weight: normal;
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-}
+    color: rgb(13, 234, 13);}
